New_Updates/infrastructure/kubernetes/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0
        args: ["start-dev"] # Mode dev pour accepter les connexions HTTP (pas HTTPS interne)
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  type: NodePort # Permet d'accéder depuis ton Windows via l'IP de la VM
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080 # On fixe le port 30080 pour que tu puisses tester facilement
